--- a/style.css
+++ b/style.css
@@ -228,3 +228,9 @@
     font-size: 1em; 
     color: #333; 
 }
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+    }
+}
